[package]
name = "http"
version = "0.1.0"
authors = ["David Martin <david.martin@split.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
hyper = "0.14.4"
reqwest = { version = "0.11.2", features = ["json"] }
serde = "1.0.124"
serde_json = "1.0.64"
